--- a/_posts/2016-05-02-Ziplines.md
+++ b/_posts/2016-05-02-Ziplines.md
@@ -2,9 +2,13 @@
 layout: post
 title: Ziplines, Fear, and Custom Software&#58; A Parable
 date: 2016-05-02
+description: Hello, daredevils out there. Have you ever tried ziplining at over 50 mph? My team did during our recent Summit in Copan Ruinas, Honduras. Some of us were very, very, very skeptical about doing this activity.
 author: Osman Hernandez
 excerpt: Hello, daredevils out there. Have you ever tried ziplining at over 50 mph? My team did during our recent Summit in Copan Ruinas, Honduras. Some of us were very, very, very skeptical about doing this activity...
-image: /img/posts/ziplines.jpg
+image: https://acklenavenue.com/img/posts/ziplines.jpg
+thumbnail: https://acklenavenue.com/img/posts/ziplines.jpg
+type: article
+keywords: Copan Ruinas, Honduras, custom software, Acklen Avenue, Clean Code, Nashville
 tags: software_development
 ---
 
