Update Job Openings “2019-05-21-designer”

--- a/_job_openings/2019-05-21-designer.md
+++ b/_job_openings/2019-05-21-designer.md
@@ -51,6 +51,6 @@ requirements:
   - >-
     BSc in Graphic Design, Visual Design, Interaction Design, Computer Science,
     Engineering, other related areas or equivalent experience.
-hidden: true
+hidden: false
 ---
 
