SEO optimization changes (#285)
* Update team.json

* Started changing pages descriptions, added cannonical link to layouts so it is present on all pages

* Removed duplicate title tags

* Added missing descriptions

* Fixed all 'title too long' issues, removed extra title from head and head-subfolder include to prevent duplicate titles

* Renamed some posts to prevent too long urls, fixed js path in includes to prevent 4xx errors, fixed job openings description design

* Fixed 4xx errors

--- a/_job_openings/2019-05-21-designer.md
+++ b/_job_openings/2019-05-21-designer.md
@@ -5,13 +5,9 @@ location: Remote - Honduras
 time: Full Time
 description: >
   We are looking for a skilled Designer who will design our software and
-  platforms to help meet our customers' needs. You will make our product more
-  user-friendly and intuitive to attract and retain customers, by combining
-  interfaces and workflows to enhance user experience.
+  platforms to help meet our customers' needs.
 
-  A successful candidate should be an analytical and creative designer who is
-  able to grasp user needs and solve problems. We also expect you to have a
-  strong portfolio of successful UX/UI and other technical projects.
+  Acklen Avenue is a leading custom software development in Nashville, Tennessee. 
 responsibilities:
   - >-
     Analyze and meet product and business specifications, as well as user
