--- a/_posts/2015-09-02-Hero-Unit.md
+++ b/_posts/2015-09-02-Hero-Unit.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: I Can Be Your Hero, Baby
+title: Hero Unit, a team of Scrum Masters ready to help your projects
 date: 2015-09-02
 description: Our clients will notice a new energy in their scrum masters and in the area of DevOps. We have decided to split responsibilities and create a new team… a team of heros… we call it “The Hero Unit.
 author: Byron Sommardahl
