Update Job Openings “2019-05-21-designer”

--- a/_job_openings/2019-05-21-designer.md
+++ b/_job_openings/2019-05-21-designer.md
@@ -1,24 +1,26 @@
 ---
 layout: job-opening
-title: Designer
+title: UX/UI Designer
 location: Remote - Honduras
 time: Full Time
 description: >
-  We are looking for a skilled Designer who will design our software and
-  platforms to help meet our customers' needs.
+  We are looking for a skilled UX/UI Designer (Junior or Senior level) who will
+  design our software and platforms to help meet our customers' needs and their
+  users' expectations.
 
-  Acklen Avenue is a leading custom software development in Nashville, Tennessee. 
+  Acklen Avenue is a leading custom software development in Nashville,
+  Tennessee. 
 responsibilities:
+  - >-
+    Solve UX problems, such as usability or findability, using a creative
+    approach.
+  - 'Perform concept, usability testing and gather feedback.'
+  - Use special personas based on user research results.
   - >-
     Analyze and meet product and business specifications, as well as user
     expectations.
-  - 'Perform concept, usability testing and gather feedback.'
-  - Use special personas based on user research results.
   - Create interaction models and evaluate their success.
   - Build wireframes and prototypes around customer needs.
-  - >-
-    Solve UX problems, such as usability or findability, using a creative
-    approach
   - >-
     Collaborate with other designers to implement attractive and functional
     designs.
@@ -28,10 +30,10 @@ responsibilities:
 requirements:
   - >-
     2+ years' experience working as an Interaction Designer, UX Designer,
-    Designer or other relevant position. UI 
+    Designer or other relevant position. 
   - >-
-    Significant experience with design software and a solid portfolio of design
-    projects. Web or mobile app samples are required.
+    Significant experience with design/prototyping software and a solid
+    portfolio of UX/UI design projects. Web or mobile app samples are required.
   - Excellent knowledge of interaction design and information architecture.
   - Good knowledge of HTML/CSS; JavaScript is a plus.
   - Experience in project management and research will be a bonus.
