Added hidden field for blog posts

--- a/_posts/2016-05-02-Ziplines.md
+++ b/_posts/2016-05-02-Ziplines.md
@@ -10,6 +10,7 @@ thumbnail: https://acklenavenue.com/img/posts/ziplines.jpg
 type: article
 keywords: Copan Ruinas, Honduras, custom software, Acklen Avenue, Clean Code, Nashville
 tags: software_development
+hidden: false
 ---
 
 ## Ziplines, Fear, and Custom Software: A Parable
