--- a/_posts/2015-09-02-Hero-Unit.md
+++ b/_posts/2015-09-02-Hero-Unit.md
@@ -10,6 +10,7 @@ thumbnail: https://acklenavenue.com/img/posts/hero.jpg
 type: article
 keywords: Acklen Avenue, Hero Unit, DevOps, Scrum Master, agile developers, custom software development
 tags: news
+hidden: false
 ---
 
 It’s really been amazing to see the metamorphosis Acklen Avenue has undergone since we started up in 2010. We’ve not only gone from three team members to more than thirty, but we’ve learned many lessons (some the hard way) about how software should be created. One of the most important lessons we’ve learned is how important our people are AND how essential it is to empower them to use their precious time wisely!
