Update Job Openings “2019-05-21-designer”

--- a/_job_openings/2019-05-21-designer.md
+++ b/_job_openings/2019-05-21-designer.md
@@ -8,44 +8,35 @@ description: >
   design our software and platforms to help meet our customers' needs and their
   users' expectations.
 
-  Acklen Avenue is a leading custom software development in Nashville,
-  Tennessee. 
+  Acklen Avenue is a leading custom software development in Nashville, Tennessee. 
 responsibilities:
-  - >-
-    Solve UX problems, such as usability or findability, using a creative
+  - Solve UX problems, such as usability or findability, using a creative
     approach.
-  - 'Perform concept, usability testing and gather feedback.'
-  - Use special personas based on user research results.
-  - >-
-    Analyze and meet product and business specifications, as well as user
+  - Perform concept, usability testing and gather feedback.
+  - Use personas based on user research results.
+  - Analyze and meet product and business specifications, as well as user
     expectations.
   - Create interaction models and evaluate their success.
   - Build wireframes and prototypes around customer needs.
-  - >-
-    Collaborate with other designers to implement attractive and functional
+  - Collaborate with other designers to implement attractive and functional
     designs.
   - Discuss design ideas and prototypes with developers and stakeholders.
   - Maintain clear and open communication across teams.
   - Stay informed about competitor products and industry trends.
 requirements:
-  - >-
-    2+ years' experience working as an Interaction Designer, UX Designer,
-    Designer or other relevant position. 
-  - >-
-    Significant experience with design/prototyping software and a solid
+  - "2+ years' experience working as an Interaction Designer, UX Designer,
+    Designer or other relevant position. "
+  - Significant experience with design/prototyping software and a solid
     portfolio of UX/UI design projects. Web or mobile app samples are required.
   - Excellent knowledge of interaction design and information architecture.
   - Good knowledge of HTML/CSS; JavaScript is a plus.
   - Experience in project management and research will be a bonus.
-  - >-
-    Strong analytical and problem-solving skills with a business-oriented
+  - Strong analytical and problem-solving skills with a business-oriented
     approach.
   - Strong communication skills.
   - Self-driven and an avid learner.
-  - 'Good attitude towards receiving and giving feedback. '
-  - >-
-    BSc in Graphic Design, Visual Design, Interaction Design, Computer Science,
+  - "Good attitude towards receiving and giving feedback. "
+  - BSc in Graphic Design, Visual Design, Interaction Design, Computer Science,
     Engineering, other related areas or equivalent experience.
 hidden: false
 ---
-
